; ModuleID = '/home/carl/AnghaBench/zstd/examples/extr_simple_compression.c_compress_orDie.c'
source_filename = "/home/carl/AnghaBench/zstd/examples/extr_simple_compression.c_compress_orDie.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [25 x i8] c"%25s : %6u -> %7u - %s \0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i8*)* @compress_orDie to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @compress_orDie(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i64, align 8
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  %10 = load i8*, i8** %3, align 8
  %11 = call i8* @mallocAndLoadFile_orDie(i8* %10, i64* %5)
  store i8* %11, i8** %6, align 8
  %12 = load i64, i64* %5, align 8
  %13 = call i64 @ZSTD_compressBound(i64 %12)
  store i64 %13, i64* %7, align 8
  %14 = load i64, i64* %7, align 8
  %15 = call i8* @malloc_orDie(i64 %14)
  store i8* %15, i8** %8, align 8
  %16 = load i8*, i8** %8, align 8
  %17 = load i64, i64* %7, align 8
  %18 = load i8*, i8** %6, align 8
  %19 = load i64, i64* %5, align 8
  %20 = call i64 @ZSTD_compress(i8* %16, i64 %17, i8* %18, i64 %19, i32 1)
  store i64 %20, i64* %9, align 8
  %21 = load i64, i64* %9, align 8
  %22 = call i32 @CHECK_ZSTD(i64 %21)
  %23 = load i8*, i8** %4, align 8
  %24 = load i8*, i8** %8, align 8
  %25 = load i64, i64* %9, align 8
  %26 = call i32 @saveFile_orDie(i8* %23, i8* %24, i64 %25)
  %27 = load i8*, i8** %3, align 8
  %28 = load i64, i64* %5, align 8
  %29 = trunc i64 %28 to i32
  %30 = load i64, i64* %9, align 8
  %31 = trunc i64 %30 to i32
  %32 = load i8*, i8** %4, align 8
  %33 = call i32 @printf(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str, i64 0, i64 0), i8* %27, i32 %29, i32 %31, i8* %32)
  %34 = load i8*, i8** %6, align 8
  %35 = call i32 @free(i8* %34)
  %36 = load i8*, i8** %8, align 8
  %37 = call i32 @free(i8* %36)
  ret void
}

declare dso_local i8* @mallocAndLoadFile_orDie(i8*, i64*) #1

declare dso_local i64 @ZSTD_compressBound(i64) #1

declare dso_local i8* @malloc_orDie(i64) #1

declare dso_local i64 @ZSTD_compress(i8*, i64, i8*, i64, i32) #1

declare dso_local i32 @CHECK_ZSTD(i64) #1

declare dso_local i32 @saveFile_orDie(i8*, i8*, i64) #1

declare dso_local i32 @printf(i8*, i8*, i32, i32, i8*) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
